fix language changer z-index on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -29,8 +29,10 @@ form {
 }
 
 #flag {
-  float: right;
-  margin: 15px;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  z-index: 10 !important;
 }
 
 /* facebook comments */
